adding flastmod to pages

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -53,7 +53,7 @@
 
 				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">i won't reach out fast but do feel free to e-mail me at <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a while to answer back but anything goes, thank you very much for reading!</p>
 
-				<p style="text-align: right"><b>last updated on: 08.feb.26</b></p>
+				<p style="text-align: right"><b>last updated on: <!--# flastmod file="~/about/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --></b></p>
 			</div>
 		</div>
 	</div>
