--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -59,7 +59,7 @@
     <hr>
     <center>
       <p><a href="#">top</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a></p>
-      <p>last updated on 10.jan.26</p>
+      <p>last updated on <!--# flastmod file="~/art/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --></p>
       <p><b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: momo, basiic</p>
     </center>
   </aside>
