--- a/doqmeat/collection/index.html
+++ b/doqmeat/collection/index.html
@@ -42,6 +42,7 @@ https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
 	</div>
 
 	<footer>
+		<p><b>last updated:</b> <!--# flastmod file="~/collection/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --></p>
 		<b>credit:</b> <a href="https://store.line.me/stickershop/product/1200836/en" target="_blank">cat stickers</a> from line store, floating heart imgs from <a href="https://foollovers.com/" target="_blank">foollovers</a>, snowflake code by <a href="https://codepen.io/sadness97/pen/mdOXzNW" target="_blank">sadness</a>
 		<br>
 		<a href="/">home</a> / <a href="/sitemap">sitemap</a>
