--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -109,7 +109,7 @@
   </main>
 
   <footer>
-    <p>last updated: <b>10.jan.26</b></p>
+    <p>last updated: <b><!--# flastmod file="~/fashion/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --></b></p>
     <p><a href="/">go back home?</a> / <a href="/sitemap">sitemap</a></p>
     <p><b>credit:</b> insp by ollie's <a href="https://olliveen.neocities.org/fashion" target="_blank">fashion page</a></p>
   </footer>
