--- a/doqmeat/info/credit.html
+++ b/doqmeat/info/credit.html
@@ -1,5 +1,6 @@
 <!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->credits<!--# endblock -->
+<!--# block name="updated" --> <!--# flastmod file="~/info/credit.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --> <!--# endblock -->
 <!--# block name="content" -->
 <p>tooltip / title on hover script i use across all of my site is from <a href="http://manos.malihu.gr/style-my-tooltips-jquery-plugin/" target="_blank">malihu</a>. fonts i've used on my site can be found on the <a href="/notebook/resources/fonts.html">fonts page</a></p>
 
