--- a/doqmeat/info/git.html
+++ b/doqmeat/info/git.html
@@ -1,5 +1,6 @@
 <!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->git<!--# endblock -->
+<!--# block name="updated" --> <!--# flastmod file="~/info/git.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --> <!--# endblock -->
 <!--# block name="content" -->
 <p>git commits from the <a href="https://github.com/doqmeat/doqmeat.com/commits/main/" target="_blank">github repo</a></p>
 <div id="rss">
