--- a/doqmeat/info/index.html
+++ b/doqmeat/info/index.html
@@ -18,7 +18,7 @@
 <ul>
   <li><b>coding editor</b>: <a href="https://code.visualstudio.com/" target="_blank">visual studio code</a></li>
   <li><b>terminal</b>: <a href="https://gitforwindows.org/" target="_blank">git bash</a> (<a href="https://ohmyposh.dev/" target="_blank">oh my posh</a> for custom themes)</li>
-  <li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> and <a href="https://ditherit.com/" target="_blank">ditherit</a> - for images that look like <a title="current page bg!" href="bg1.png" target="_blank">this</a></li>
+  <li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> and <a href="https://ditherit.com/" target="_blank">ditherit</a> - for images that look like <a title="current page bg!" href="assets/bg.png" target="_blank">this</a></li>
   <li><a href="https://www.clipstudio.net/en/" target="_blank">clip studio paint</a> - anything i've made art / graphic related has been with this program most of the time.</li>
   <li><a href="https://remove.bg" target="_blank">remove.bg</a> - for removing the bg of pngs</li>
   <li><a href="https://libresprite.github.io/#!/" target="_blank">libresprite</a> - a fork of <i>asesprite.</i> made some pixels with it.</li>
