--- a/doqmeat/info/insp.html
+++ b/doqmeat/info/insp.html
@@ -1,5 +1,6 @@
 <!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->inspiration<!--# endblock -->
+<!--# block name="updated" --> <!--# flastmod file="~/info/insp.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --> <!--# endblock -->
 <!--# block name="content" -->
 <h2>sites &amp; places that have inspired me!</h2>
 <a href="https://hunipyon.neocities.org/" target="_blank"><img src="/sites/!g/hunipyon.gif"></a>
