--- a/doqmeat/info/past-layouts.html
+++ b/doqmeat/info/past-layouts.html
@@ -1,5 +1,6 @@
 <!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->layouts<!--# endblock -->
+<!--# block name="updated" --> <!--# flastmod file="~/info/past-layouts.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --> <!--# endblock -->
 <!--# block name="content" -->
 <h2>landing pages</h2>
 <img width="100%" title="dec 2023 - inspired by madoka rebellion" src="archive/layouts/231214-pmmm-landing.jpg">
