--- a/doqmeat/learning/index.html
+++ b/doqmeat/learning/index.html
@@ -31,7 +31,7 @@
 		<footer>
 			<p>....... <a title="go back home" href="/">ᓚᘏᗢ home</a> .......</p>
 			<p> &hearts; all made with love by des &hearts;</p>
-			<p>last updated on 01.feb.26</p>
+			<p>last updated on <!--# flastmod file="~/learning/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --></p>
 			<p><b>credit</b>: <a href="/notebook/resources/fonts.html">fonts</a> used: bm-neko, mononoki, power pagedoll from fujimoto's <i>chainsaw man</i></p>
 		</footer>
 	</main>
