--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -595,7 +595,7 @@ coded with love by des
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 10.jan.26</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: <!--# flastmod file="~/photobook/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --></b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
