--- a/doqmeat/reading/index.html
+++ b/doqmeat/reading/index.html
@@ -151,7 +151,7 @@
 	</main>
 
 	<footer>
-		<b>last updated: 16.feb.25</b>
+		<b>last updated: <!--# flastmod file="~/reading/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --></b>
 		<br>
 		<b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: gaegu.
 		<br>
