--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -254,6 +254,8 @@
 			<a href="https://moonflower.nekoweb.org" target="_blank"><img src="!g/moonflower.gif" alt="moonflower"></a>
 			<a href="https://waterlily.nekoweb.org" target="_blank"><img src="!g/waterlily.png" alt="waterlily"></a>
 			<a href="https://treflemefle.nekoweb.org/" target="_blank"><img src="!g/treflemefle.png" alt="treflemefle"></a>
+			<a href="https://lunartic.org" target="_blank"><img src="!g/lunartic.gif" alt="lunartic"></a>
+			<a href="https://yatagarasu.nekoweb.org/" target="_blank"><img src="!g/yatagarasu.gif" alt="yatagarasu"></a>
 		</div>
 
 		<!-- new buttons ^^ -->
