--- a/doqmeat/faq/index.html
+++ b/doqmeat/faq/index.html
@@ -65,7 +65,7 @@
       <p>and lastly i just wanna say: this should be a fun thing to do. you don't have to update your site regularly, worry that it doesn't have enough "content", etc. please do whatever the fuck you want with your site and don't worry too much about it!</p>
     </details>
     <footer>
-      last updated on <b>15.aug.25</b>
+      last updated on <b><!--# flastmod file="~/faq/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --></b>
       <br>
       <a href="#top">top</a> / <a href="/">home</a> / <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">got another question?</a>
       <br>
