--- a/doqmeat/info/past-homepages.html
+++ b/doqmeat/info/past-homepages.html
@@ -1,5 +1,6 @@
 <!--# layout file="~/layouts/info.html" -->
 <!--# block name="title" -->homepage layouts archive<!--# endblock -->
+<!--# block name="updated" --> <!--# flastmod file="~/info/past-homepages.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --> <!--# endblock -->
 <!--# block name="content" -->
 <p>a place for me to showcase my previous layouts and my thoughts on them! click on the imgs to open them on a new tab.</p>
 <h2 id="v5">version 5</h2>
