--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -169,7 +169,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 					<p><span class="title">watching: </span> jojo (part 4)</p>
 					<p><span class="title">reading: </span> Computer Systems A Programmer's Perspective</p>
 					<p><span class="title">working on: </span> reworking iframe pages with the SSI feature of <a href="https://nekoweb.org" target="_blank">nekoweb</a>, new f2u template, working on <a href="https://vgen.co/doqmeat" target="_blank">site comms</a></p>
-					<p class="date">last updated: 08.feb.26</p>
+					<p class="date">last updated: <!--# flastmod file="~/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --></p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
