added new fonts to font page

--- a/doqmeat/notebook/resources/fonts.html
+++ b/doqmeat/notebook/resources/fonts.html
@@ -40,6 +40,9 @@
 		<!-- font template 
 <p class="font" style="font-family:x;font-size:19px;"><a href="" target="_blank" >x</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 -->
+		<p class="font" style="font-family:yuromoji;font-size:19px;"><a href="https://www.asterism-m.com/font/bmp-2byte/" target="_blank">yuromoji</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
+
+		<p class="font" style="font-family:toshiba;font-size:19px;"><a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?toshibasat_8x14" target="_blank">toshibaSat 8x14</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:klee one reg;font-size:19px;"><a href="https://fonts.google.com/specimen/Klee+One" target="_blank">klee one</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
