--- a/doqmeat/notebook/F2U/materials.html
+++ b/doqmeat/notebook/F2U/materials.html
@@ -39,14 +39,10 @@
 <body>
 
 	<div id="wrapper">
-		<p class="hide"><small><a href="/" target="_parent">home</a> > <a href="/notebook" target="_parent">notebook</a> > F2U ></small>
-			<center>
-				<h1>materials</h1>
-			</center>
-
-		<h2 id="buttons">buttons</h2>
-		<p><img src="../!g/ko-fi-template.png" alt="ko-fi template button with a pink heart"> <img src="../!g/ko-fi-template-red.png" alt="ko-fi red template button with a red heart"> <br> ko-fi button.</p>
-		<p><img src="/!f/v5/assets/vgen.png" alt="vgen button that says commissions and shop"> <br> VGen button</p>
+		<p class="hide"><small><a href="/" target="_parent">home</a> > <a href="/notebook" target="_parent">notebook</a> > F2U ></small></p>
+		<center>
+			<h1>materials</h1>
+		</center>
 
 		<h2 id="bgs">backgrounds</h2>
 
