--- a/doqmeat/notebook/F2U/stamps.html
+++ b/doqmeat/notebook/F2U/stamps.html
@@ -15,23 +15,28 @@
 	<div id="wrapper">
 		<p class="hide"><small><a href="/" target="_parent">home</a> > <a href="/notebook" target="_parent">notebook</a> > F2U ></small>
 			<center>
-				<h1>stamps</h1>
+				<h1>graphics</h1>
 			</center>
 		<p>credit is not necesary but a link back is appreciated!
-		<p>here's stamps i've made using this <a href="https://www.deviantart.com/timarena/art/STAMP-TEMPLATE-79767188">template</a>
-		<p>pics used in these stamps are from official art / pics from their respective media
+		<p><b>credits:</b> stamp <a href="https://www.deviantart.com/timarena/art/STAMP-TEMPLATE-79767188">template</a>
+		<p>pics used in these are from official art, pics from their respective media, or my own art.
 
-		<h2>siinamota / powapowa_p</h2>
-		<p class="centered"><img src="/collection/internet-graphics/!g/cokeganenouta.png"><img src="/collection/internet-graphics/!g/halo.png"><img src="/collection/internet-graphics/!g/laststrobe.png"><img src="/collection/internet-graphics/!g/sepiarecord.png"><img src="/collection/internet-graphics/!g/skyfish.png">
+		<h2>buttons</h2>
+		<img src="../!g/ko-fi-template.png" alt="ko-fi template button with a pink heart">
+		<img src="../!g/ko-fi-template-red.png" alt="ko-fi red template button with a red heart">
+		<img src="/!f/v5/assets/vgen.png" alt="vgen button that says commissions and shop">
 
-		<h2>yukika</h2>
-		<p class="centered"><img src="/collection/internet-graphics/!g/yukika.png">
-
-		<h2>minecraft</h2>
-		<p class="centered"><img src="/collection/internet-graphics/!g/birchforestconceptart.png"><img src="/collection/internet-graphics/!g/stevenalex.png"><img src="/collection/internet-graphics/!g/stevenbee.png">
-
-		<h2>pikmin</h2>
-		<p class="centered"><img src="/collection/internet-graphics/!g/oatchilove.png">
+		<h2>stamps</h2>
+		<img src="/collection/internet-graphics/!g/cokeganenouta.png" alt="kokegane no uta album cover stamp">
+		<img src="/collection/internet-graphics/!g/halo.png" alt="">
+		<img src="/collection/internet-graphics/!g/laststrobe.png" alt="">
+		<img src="/collection/internet-graphics/!g/sepiarecord.png" alt="">
+		<img src="/collection/internet-graphics/!g/skyfish.png" alt="">
+		<img src="/collection/internet-graphics/!g/yukika.png" alt="">
+		<img src="/collection/internet-graphics/!g/birchforestconceptart.png" alt="">
+		<img src="/collection/internet-graphics/!g/stevenalex.png" alt="">
+		<img src="/collection/internet-graphics/!g/stevenbee.png" alt="">
+		<img src="/collection/internet-graphics/!g/oatchilove.png" alt="">
 
 	</div>
 </body>
