--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -181,7 +181,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 					<p>credit is not necessary but a link back is appreciated!</p>
 					<p>note: please <mark>do not <a class="outlink" href="https://www.hostinger.com/tutorials/hotlinking" target="_blank">hotlink</a>!</mark> download them and save them to your own server. i change things around frequently too so it might break lol.</p>
 					<ul>
-						<li><a href="F2U/materials.html" target="iframe_d">site materials</a></li>
+						<li><a href="F2U/materials.html" target="iframe_d">materials</a></li>
 						<ul>
 							<li><a href="F2U/materials.html#bgs" target="iframe_d">backgrounds</a></li>
 							<li><a href="F2U/materials.html#pix" target="iframe_d">pixels</a></li>
@@ -189,7 +189,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 						</ul>
 						<li><a href="F2U/scans.html" target="iframe_d">scans</a></li>
 
-						<li><a href="F2U/stamps.html" target="iframe_d">stamps</a></li>
+						<li><a href="F2U/stamps.html" target="iframe_d">graphics</a></li>
 					</ul>
 
 					<!-- 		paper left end div -->
