--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -84,6 +84,9 @@
 			<!-- <button onclick="showPic('IMG PATH','ALT TEXT','caption')">button</button> -->
 			<section id="y2026">
 				<article>
+					<p><b>18.feb.26 - 10pm</b> been working on making better friendships this year. been asking more people to hang out with me and all that. i want to put my effort into these friendships. i'm tired of walking on eggshells for the sake of people and not being genuine to who i am for them. i want to change that this year.</p>
+				</article>
+				<article>
 					<p><b>15.feb.25 - 12am</b> i had such a nice valentine's day yesterday... i am very loved <img src="/!g/pix/heart-cat1.gif" alt="heart cat emoji"> also went to a little valentine's event as well and there was some art being displayed. i took pics of the ones i really liked. they are all depictions of love!
 						<button onclick="showPic('!g/260214-angels.png','angels embrasing each other','i thought this one was wonderful and it was made by a friend too!')">angels.png</button>
 						<button onclick="showPic('!g/260214-gay.png','female presenting people on top of another','loveeee this one very much')">gay.png</button>
