new journal post

--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -34,7 +34,7 @@
 		<p><img src="/!g/deco/catlaying.gif"> i fucking love collecting these so much... all of these are just stuff i like.</p>
 		<p>click for credit, i'll try my best to link them back to their sources! please feel free to <a title="e-mail" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">contact me</a> if you know the source of any of these. some of these are <a href="/notebook/F2U/stamps.html" target="_blank">made by me</a> <img src="/!g/pix/2ofem.gif"></p>
 
-		<h2 id="1" class="title">stamps</h2>
+		<h2 id="1" class="title">stamps (99 x 56)</h2>
 		<div id="stamps" class="container">
 
 			<a href="https://www.deviantart.com/aetheriaa/art/Shooting-Star-Stamp-593476133" target="_blank"><img src="!g/shootingstars.gif"></a>
@@ -153,7 +153,7 @@
 			<img src="!g/git.png" alt="git.gay">
 		</div>
 
-		<h2 id="2" class="title">blinkies</h2>
+		<h2 id="2" class="title">blinkies (150 x 20)</h2>
 		<div id="blinkies" class="container">
 
 			<img src="!g/stars.gif">
@@ -231,7 +231,7 @@
 
 		</div>
 
-		<h2 id="3" class="title">buttons</h2>
+		<h2 id="3" class="title">buttons (88 x 31)</h2>
 		<div id="buttons" class="container">
 			<img src="!g/notforchildren.jpg">
 			<img src="!g/transrights.png">
@@ -255,6 +255,7 @@
 			<img src="!g/get-pussy.gif" alt="get pussy now">
 			<a href="https://www.tumblr.com/cartoonishvendor/710638657066926080/drippin-themed-88x31-buttons-middle-animation-is?source=share" target="_blank"><img src="!g/drippin.gif"></a>
 			<img src="!g/handcoded.gif">
+			<a href="https://rico.zone" target="_blank"><img src="!g/viewsource.png" alt="view source"></a>
 			<a href="https://yesterweb.org/no-to-web3/" target="_blank"><img src="!g/yesterweb-saynotoweb3.gif"></a>
 			<img src="!g/fireskull.gif">
 			<img src="!g/portal.jpg">
@@ -299,7 +300,7 @@
 	</div>
 
 	<footer>
-		<p>last updated on: <b>24.dec.25</b></p>
+		<p>last updated on: <b><!--# flastmod file="~/index.html" fmt="%dd.%b.%y" timezone="America/Puerto_Rico" --></b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
