--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -84,6 +84,9 @@
 			<!-- <button onclick="showPic('IMG PATH','ALT TEXT','caption')">button</button> -->
 			<section id="y2026">
 				<article>
+					<p><b>22.feb.26 - 5am</b> sick and going through the worst lab i have ever gone through in my computer science student life <img src="/!g/pix/angry-cat.gif" alt="cat emoji"> <button onclick="showPic('!g/260222-datalab.jpg','screenshot of a terminal outputting the excersices i have left to do alongside the ones i\'ve already done','this is hell')">datalab.jpg</button></p>
+				</article>
+				<article>
 					<p><b>18.feb.26 - 10pm</b> been working on making better friendships this year. been asking more people to hang out with me and all that. i want to put my effort into these friendships. i'm tired of walking on eggshells for the sake of people and not being genuine to who i am for them. i want to change that this year.</p>
 				</article>
 				<article>
